--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,8 +1,8 @@
+max_width = 80
+tab_spaces = 2
 brace_style = "AlwaysNextLine"
 control_brace_style = "AlwaysNextLine"
 hard_tabs = true
-imports_indent = "Visual"
-indent_style = "Visual"
 newline_style = "Unix"
 normalize_comments = true
 normalize_doc_attributes = true
